[package]
name = "portpub"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = true

[dependencies]
portpub-shared = { path = "../shared", version = "0.3.1" }
tokio.workspace = true
uuid = {version = "1.2.0", features = [ "serde", "v4" ] }
serde = {version = "1", features =["derive"]}
serde_json = {version = "1"}
dashmap = { version = "1" }
rand = "0.8"
tracing = "0.1.32"
tracing-subscriber = "0.3.18"
tokio-util = { version = "0.7.1", features = ["full"] }
futures = "0.3"
bytes = "1"
clap = { version = "4.5.34", features = ["derive"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
anyhow = "1.0"
color-eyre = "0.6.3"
octocrab = "0.44.0"
tokio-stream = "0.1.17"
httparse = "1.10.1"
chrono = "0.4"
copypasta = "0.10.2"
