[package]
name = "portpub-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
publish = true

[dependencies]
tokio.workspace = true
uuid = {version = "1.2.0", features = [ "serde", "v4" ] }
serde = {version = "1", features =["derive"]}
serde_json = {version = "1"}
dashmap = { version = "6" }
rand = "0.8"
tracing = "0.1.32"
tracing-subscriber = "0.3.18"
tokio-util = { version = "0.7.1", features = ["full"] }
futures = "0.3"
bytes = "1"
